# Freeze-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  imgui.ini  todo.md
engine/assets/shaders/: Line.frag  Line.vert  Point.frag  Point.vert  Quad.frag  Quad.vert  TexturedQuad.frag  TexturedQuad.vert  Triangle.frag  Triangle.vert
engine/src/: EntryPoint.cpp
engine/src/core/: Application.cpp  Application.h  AudioSystem.cpp  AudioSystem.h  Core.h  OpenGLDebug.h  Window.cpp  Window.h  root_dir.h
engine/src/core/audio/: AudioSystem.h
engine/src/event/: Event.h  KeyEvent.h  KeyboardInput.cpp  KeyboardInput.h  MouseEvent.h  MouseInput.cpp  MouseInput.h  WindowEvent.h
engine/src/imgui/: ImGuiContext.h
engine/src/input/: KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
engine/src/physics/: Box2DDebugRenderer.cpp  Box2DDebugRenderer.h  InitPhysics.h  PhysicsBody.cpp  PhysicsBody.h
engine/src/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
sandbox/assets/shaders/: Player.frag  Player.vert
sandbox/src/: Enemy.cpp  Enemy.h  Entity.h  Player.cpp  Player.h  Sandbox.cpp  Sandbox.h  World.cpp  World.h
